--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "client",
+  "name": "social-media-client",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:3001/",
   "dependencies": {
     "@apollo/client": "^3.8.1",
     "@testing-library/jest-dom": "^5.16.5",
