--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run seed"
   },
   "eslintConfig": {
     "extends": [
