--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"cd server && npm run start\" \"cd client && npm run start\"",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run start\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run seed"
   },
   "eslintConfig": {
     "extends": [
