--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "seed": "cd sever && npm run seed",
+    "seed": "cd server && npm run seed",
     "heroku-postbuild": "npm run seed"
   },
   "eslintConfig": {
